Cleanup code: Vector ti List transition